--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "build": "vite build",
-        "dev": "vite"
+        "dev": "vite",
+        "start": "react-scripts start"
     },
     "devDependencies": {
         "autoprefixer": "^10.4.20",
